[package]
name = "terminaux"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"       # For low-level system calls
nix = { version = "0.27.1", default-features = false, features = ["term", "process", "fs", "ioctl"] }       # For PTY handling
crossbeam = "0.8"  # For concurrent channels
crossterm = "0.26"
vt100 = "0.15"
lazy_static = "1.5.0"
vte = "0.15.0"
eframe = "0.31.0"
log = "0.4.25"
